Fix overflow on X axis

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ html {
 
 body {
   margin: 0;
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 /* Header Styles */
